# walign-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE.APACHE2  LICENSE.MIT  README.md  test.txt
src/walign/: alignment.rs  corpus.rs  ibm_model_1.rs  io.rs  lib.rs  model.rs  result.rs  vocabulary.rs
src/walign/model/: .ibm_model_1.rs.swp  ibm_model_1.rs  model.rs
