[package]
authors = ["odashi <yus.takara@gmail.com>"]
description = "Word alignment toolkit."
edition = "2018"
homepage = "https://github.com/odashi/walign_rs/"
license = "MIT OR Apache-2.0"
name = "walign"
readme = "README.md"
repository = "https://github.com/odashi/walign_rs/"
version = "0.1.0"

[lib]
name = "walign"
path = "src/walign/lib.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[dependencies]
structopt = "0.3"
